assets/css/themes/mainwp-default-dark-theme.css
/* ... */
.mainwp-ui.mainwp-custom-theme .ui.table > tbody > tr.active {
  background-color: var(--mainwp-element-background-secondary) !important;
  color: var(--mainwp-text) !important;
}

.mainwp-ui.mainwp-custom-theme .ui.table > tbody > tr.warning,
.mainwp-ui.mainwp-custom-theme .ui.table > tbody > tr.suspended {
  background-color: #FFD30007 !important;
}

.mainwp-ui.mainwp-custom-theme .ui.table > tbody > tr.error {
  background-color: #AD000007 !important;
}

.mainwp-ui.mainwp-custom-theme .ui.table>tbody>tr>td,
.mainwp-ui.mainwp-custom-theme .ui.table>tr>td {
  border-color: var(--mainwp-border) !important;
}

.mainwp-ui table.dataTable tbody tr > .dtfc-fixed-left,
.mainwp-ui table.dataTable tbody tr > .dtfc-fixed-right {
  background-color: var(--mainwp-element-background-secondary) !important;
}

.mainwp-ui.mainwp-custom-theme .ui.table > tfoot {
  display: none;
}

.mainwp-ui.mainwp-custom-theme table th .sort.icon:not(.up, .down):before {
  opacity: 0.125;
  font-size: 0.8em !important;
  line-height: 9px;
  content: "\f106";
  content: "\f106"/"";
  font-family: "icons", sans-serif;
  position: relative;
  bottom: 0%;
  display: block;
}
.mainwp-ui.mainwp-custom-theme table th .sort.icon:not(.up, .down):after {
  opacity: 0.125;
  font-size: 0.8em !important;
  line-height: 9px;
  content: "\f107";
  content: "\f107"/"";
  font-family: "icons", sans-serif;
  position: relative;
  top: 0%;
  display: block;
}

.mainwp-ui.mainwp-custom-theme table th .up.icon:before {
  opacity: 0.625;
  font-size: 0.8em !important;
  line-height: 9px;
  content: "\f106";
  content: "\f106"/"";
  font-family: "icons", sans-serif;
  position: relative;
  bottom: 0%;
  display: block;
}
.mainwp-ui.mainwp-custom-theme table th .up.icon:after {
  opacity: 0.125;
  font-size: 0.8em !important;
  line-height: 9px;
  content: "\f107";
  content: "\f107"/"";
  font-family: "icons", sans-serif;
  position: relative;
  top: 0%;
  display: block;
}

.mainwp-ui.mainwp-custom-theme table th .down.icon:before {
  opacity: 0.125;
  font-size: 0.8em !important;
  line-height: 9px;
  content: "\f106";
  content: "\f106"/"";
  font-family: "icons", sans-serif;
  position: relative;
  bottom: 0%;
  display: block;
}
.mainwp-ui.mainwp-custom-theme table th .down.icon:after {
  opacity: 0.625;
  font-size: 0.8em !important;
  line-height: 9px;
  content: "\f107";
  content: "\f107"/"";
  font-family: "icons", sans-serif;
  position: relative;
  top: 0%;
  display: block;
}

/* Invert Calendar */

.mainwp-ui.mainwp-custom-theme .ui.calendar thead,
.mainwp-ui.mainwp-custom-theme .ui.calendar thead th {
  background-color: var(--mainwp-element-background) !important;
}

.mainwp-ui.mainwp-custom-theme .ui.calendar:before {
  background-color: var(--mainwp-element-background) !important;
}

/* Pagination */

.mainwp-ui.mainwp-custom-theme .ui.pagination.menu {
  background-color: var(--mainwp-element-background);
  border-radius: var(--input-radius);
  -webkit-border-radius: var(--input-radius);
  border: 1px solid var(--mainwp-border) !important;
  overflow: hidden;
}
.mainwp-ui.mainwp-custom-theme .ui.pagination.menu .item a {
  color: var(--mainwp-link-color) !important;
  padding: 0.5rem 1rem !important;
}
.mainwp-ui.mainwp-custom-theme .ui.pagination.menu .item:hover,
.mainwp-ui.mainwp-custom-theme .ui.pagination.menu .item.active {
  background: var(--mainwp-element-background-secondary);
  padding: 0.5rem 1rem !important;
}
.mainwp-ui.mainwp-custom-theme .ui.pagination.menu .item:hover .page-link,
.mainwp-ui.mainwp-custom-theme .ui.pagination.menu .item.active .page-link {
  color: var(--mainwp-text-secondary) !important;
}

.mainwp-ui.mainwp-custom-theme .ui.pagination.menu .item.disabled .page-link {
  color: var(--mainwp-text-secondary) !important;
}

.mainwp-ui.mainwp-custom-theme div.dt-container .dt-paging .dt-paging-button.disabled, 
.mainwp-ui.mainwp-custom-theme div.dt-container .dt-paging .dt-paging-button.disabled:hover, 
.mainwp-ui.mainwp-custom-theme div.dt-container .dt-paging .dt-paging-button.disabled:active {
  color: var(--mainwp-text-secondary) !important;
}

/* Tooltips */

.mainwp-ui.mainwp-custom-theme [data-tooltip]::before,
.mainwp-ui.mainwp-custom-theme [data-tooltip]::after,
.mainwp-ui.mainwp-custom-theme .ui.slider [data-tooltip][data-variation="black"]::after,
.mainwp-ui.mainwp-custom-theme .ui.popup:not(.calendar, .menu, .mainwp-popup-tooltip, .mainwp-help-popup):before,
.mainwp-ui.mainwp-custom-theme .ui.popup:not(.calendar, .menu, .mainwp-popup-tooltip, .mainwp-help-popup):after {
  background: var(--mainwp-element-background-secondary) !important;
  border: 1px solid var(--mainwp-element-background-secondary) !important;
  color: var(--mainwp-text) !important;
  box-shadow: none !important;
}

.mainwp-ui.mainwp-custom-theme .mainwp-help-popup,
.mainwp-ui.mainwp-custom-theme .mainwp-help-popup:before {
  background: var(--mainwp-text) !important;
  border: var(--mainwp-text) !important;
}

.mainwp-ui.mainwp-custom-theme .mainwp-help-popup .ui.header {
  color: #1c1d1b !important;
}

/* Placeholder */

.mainwp-ui.mainwp-custom-theme .mainwp-no-results-placeholder {
  opacity: .2;
}

.mainwp-ui.mainwp-custom-theme .ui.placeholder {
  opacity: 0.02;
}

/* Main Navigation
  ========================================================================== */

.mainwp-ui.mainwp-custom-theme #mainwp-main-navigation-container {
  background-color: var(--mainwp-element-background) !important;
}


.mainwp-ui.mainwp-custom-theme #mainwp-first-level-navigation,
.mainwp-ui.mainwp-custom-theme #mainwp-first-level-navigation:hover,
.mainwp-ui.mainwp-custom-theme #mainwp-first-level-navigation-menu {
  background-color: var(--mainwp-element-background) !important;
}

.mainwp-ui.mainwp-custom-theme #mainwp-first-level-navigation {
  padding-top: 25px;
}
/* ... */

